--- a/config/locales/es-AR.yml
+++ b/config/locales/es-AR.yml
@@ -3,3 +3,7 @@ es-AR:
 
   spree:
     taxonomy_brands_name: "Marcas"
+
+  mercado_pago:
+    make_payment: "Realizar pago en Mercado Pago"
+    authentication_error: "Hubo un error al realizar la autenticación con Mercado Pago"
